version/0.12/_sources/api/solver/_autosummary/settings/design_points_1.rst.txt
:orphan:

.. _design_points_1:

design_points
=============

.. currentmodule:: ansys.fluent.core.solver.settings_231.design_points_1

.. autoclass:: design_points
    :show-inheritance:
    :undoc-members:
.. rubric:: Commands

==================================================   ===========================================================

Command                                                                                                  Summary

==================================================   ===========================================================
:ref:`create_1 <create_1>`                                                                 Add new Design Point.

:ref:`duplicate <duplicate_1>`                                                           Duplicate Design Point.

:ref:`load_case_data <load_case_data>`                   Loads relevant case/data file for current design point.

:ref:`delete_design_points <delete_design_points>`                                         Delete Design Points.

:ref:`save_journals <save_journals>`                                                              Save Journals.

:ref:`clear_generated_data <clear_generated_data>`                                         Clear Generated Data.

:ref:`update_current <update_current>`                                              Update Current Design Point.

:ref:`update_all <update_all>`                                                          Update All Design Point.

:ref:`update_selected <update_selected>`                                          Update Selected Design Points.

==================================================   ===========================================================

.. rubric:: Named object type

:ref:`design_points_child <design_points_child>`


.. rubric:: Included in:

==========================================================   ==============================================

Parent                                                                                              Summary

==========================================================   ==============================================
:ref:`parametric_studies_child <parametric_studies_child>`       'child_object_type' of parametric_studies.

==========================================================   ==============================================

